--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,28 +1,42 @@
 /* fonts */
 
 @font-face {
-  font-family: "Arvo", sans-serif;
-  src: url(assets/fonts/Arvo-Regular.ttf);
-}
-
-@font-face {
-  font-family: "Arvo", sans-serif;
-  src: url(assets/fonts/Arvo-Italic.ttf);
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Arvo", sans-serif;
-  src: url(assets/fonts/Arvo-Bold.ttf);
+  font-family: 'Arvo';
+  src: url('/assets/fonts/Arvo-Bold.woff2') format('woff2'),
+      url('/assets/fonts/Arvo-Bold.woff') format('woff');
   font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-family: "Arvo", sans-serif;
-  src: url(assets/fonts/Arvo-BoldItalic.ttf);
+  font-family: 'Arvo';
+  src: url('/assets/fonts/Arvo-BoldItalic.woff2') format('woff2'),
+      url('/assets/fonts/Arvo-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
+  font-display: swap;
 }
+
+@font-face {
+  font-family: 'Arvo';
+  src: url('/assets/fonts/Arvo.woff2') format('woff2'),
+      url('/assets/fonts/Arvo.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Arvo';
+  src: url('/assets/fonts/Arvo-Italic.woff2') format('woff2'),
+      url('/assets/fonts/Arvo-Italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+
+
 
 /* site-wide styles */
 
