fiddled with markdown formatting

--- a/public/styles/markdown.css
+++ b/public/styles/markdown.css
@@ -7,3 +7,16 @@ strong {
 em {
   font-style: italic;
 }
+
+h2 {
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+
+p {
+  line-height: 1.2;
+}
+
+ul {
+  margin-bottom: 15px;
+}
