--- a/views/results.pug
+++ b/views/results.pug
@@ -11,7 +11,7 @@ block content
         .year-section
           .year-button
             .year-title= year
-            .year-arrow V
+            img.year-arrow(width=22, src="/assets/images/arrow-down.png", alt="")
           .meet-list
             each meet in array
               ul.meet
