made meet page not shit itself without pdfs

--- a/views/meet.pug
+++ b/views/meet.pug
@@ -9,7 +9,7 @@ block content
       .year= meet.year
       .opponent Dover-Sherborn v. #{meet.opponent}
       .score-grouping
-        .sex F
+        .sex Girls
         if meet.girlsHomeScore > meet.girlsOpponentScore
           .score.majority= meet.girlsHomeScore
           .score= meet.girlsOpponentScore
@@ -17,7 +17,7 @@ block content
           .score= meet.girlsHomeScore
           .score.majority= meet.girlsOpponentScore
       .score-grouping
-        .sex M
+        .sex Boys
         if meet.boysHomeScore > meet.boysOpponentScore
           .score.majority= meet.boysHomeScore
           .score= meet.boysOpponentScore
@@ -25,11 +25,17 @@ block content
           .score= meet.boysHomeScore
           .score.majority= meet.boysOpponentScore
     h2 Girls Results
-    - var girlsURL = "https://drive.google.com/viewerng/viewer?embedded=true&url=http://api.dssd.team" + meet.girlsSpreadsheet.url
-    .object-wrapper
-      embed(src=girlsURL)
+    if meet.girlsSpreadsheet != null
+      - var girlsURL = "https://drive.google.com/viewerng/viewer?embedded=true&url=http://api.dssd.team" + meet.girlsSpreadsheet.url
+      .object-wrapper
+        embed(src=girlsURL)
+    else
+      p.spreadsheet-error No spreadsheet added.
     h2 Boys Results
-    - var boysURL = "https://drive.google.com/viewerng/viewer?embedded=true&url=http://api.dssd.team" + meet.boysSpreadsheet.url
-    .object-wrapper
-      embed(src=boysURL)
+    if meet.boysSpreadsheet != null
+      - var boysURL = "https://drive.google.com/viewerng/viewer?embedded=true&url=http://api.dssd.team" + meet.boysSpreadsheet.url
+      .object-wrapper
+        embed(src=boysURL)
+    else
+      p.spreadsheet-error No spreadsheet added.
     
